<resources>
    <string name="app_name">DroidCafe1204</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="textview">TextView</string>
    <string name="name_label_text">Name</string>
    <string name="enter_your_name_bitch">Enter your name bitch!</string>
    <string name="where_do_you_live_hoe">Where do you live hoe?</string>
    <string name="whats_your_number">whats your number!?</string>
    <string name="anything_to_add">anything to add?</string>
    <string name="note">Note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="pick_up">Pick up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="contact">Contact</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favorites">Favorites</string>
    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="action_contact_message">You selected Contact</string>



    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>


</resources>