<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe1204.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never"    />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/order"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"    />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/status"
        android:icon="@drawable/ic_information"
        app:showAsAction="always"    />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="30"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite_heart"
        app:showAsAction="ifRoom"    />
</menu>